k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenix-service
spec:
  type: ClusterIP
  selector:
    app: phoenix
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
